--- a/popup.html
+++ b/popup.html
@@ -3,7 +3,8 @@
   <head>
     <title>Wayfair Extension</title>
     <script type="text/javascript" src="thirdParty/jquery-3.2.1.min.js"></script>
-    <script src="js/popup.js"></script>
+    <script type="text/javascript" src="js/popup.js"></script>
+    <!-- <script type="text/javascript" src="productSpec/productSpecSheet.json"></script> -->
 
     <!-- Latest compiled and minified CSS -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
@@ -16,6 +17,7 @@
 
     <div class="container">
     	<h6>Wayfair</h6>
+    	<button id="check-UPS" class="btn btn-info btn-xs">Get UPSs</button>
     	<button id="check-LTL" class="btn btn-info btn-xs">Get LTLs</button>
     </div>
   </body>
