slightly change of html

--- a/popup.html
+++ b/popup.html
@@ -27,10 +27,11 @@
             </label>
             <input type="text" class="form-control" readonly>
         </div>
+        <br>
     	<button id="upload-CRW" class="btn btn-info btn-xs">Upload CR</button>
     	<button id="check-UPS" class="btn btn-info btn-xs">Get UPSs</button>
     	<button id="check-LTL" class="btn btn-info btn-xs">Get LTLs</button>
-    	<button id="download-PO" class="btn btn-info btn-xs">Download POs</button>
+    	<button id="download-PO" class="btn btn-info btn-xs">Download PO</button>
     </div>
   </body>
 </html>
