--- a/popup.html
+++ b/popup.html
@@ -29,9 +29,11 @@
         </div>
         <br>
     	<button id="upload-CRW" class="btn btn-info btn-xs">Upload CR</button>
-    	<button id="check-UPS" class="btn btn-info btn-xs">Get UPSs</button>
-    	<button id="check-LTL" class="btn btn-info btn-xs">Get LTLs</button>
-    	<button id="download-PO" class="btn btn-info btn-xs">Download PO</button>
+    	<button id="check-UPS" class="btn btn-info btn-xs" disabled="disabled">Get UPSs</button>
+    	<button id="check-LTL" class="btn btn-info btn-xs" disabled="disabled">Get LTLs</button>
+    	<button id="download-LTL" class="btn btn-info btn-xs" disabled="disabled">Download LTL</button>
+    	<button id="download-UPS" class="btn btn-info btn-xs" disabled="disabled">Download UPS</button>
+    	<button id="test" class="btn btn-info btn-xs">test</button>
     </div>
   </body>
 </html>
