fixed dimension json passing bug

--- a/popup.html
+++ b/popup.html
@@ -32,7 +32,8 @@
     	<button id="check-UPS" class="btn btn-info btn-xs" disabled="disabled">Get UPSs</button>
     	<button id="check-LTL" class="btn btn-info btn-xs" disabled="disabled">Get LTLs</button>
     	<button id="download-LTL" class="btn btn-info btn-xs" disabled="disabled">Download LTL</button>
-    	<button id="download-UPS" class="btn btn-info btn-xs" disabled="disabled">Download UPS</button>
+        <button id="download-UPS" class="btn btn-info btn-xs" disabled="disabled">Download UPS</button>
+    	<button id="check-dimension" class="btn btn-info btn-xs">Check Dimension</button>
     	<button id="test" class="btn btn-info btn-xs">test</button>
     </div>
   </body>
