--- a/popup.html
+++ b/popup.html
@@ -28,12 +28,12 @@
             <input type="text" class="form-control" readonly>
         </div>
         <br>
-    	<button id="upload-CRW" class="btn btn-info btn-xs">Upload CR</button>
+    	<button id="upload-CRW" class="btn btn-info btn-xs" disabled="disabled">Upload CR</button>
     	<button id="check-UPS" class="btn btn-info btn-xs" disabled="disabled">Get UPSs</button>
     	<button id="check-LTL" class="btn btn-info btn-xs" disabled="disabled">Get LTLs</button>
     	<button id="download-LTL" class="btn btn-info btn-xs" disabled="disabled">Download LTL</button>
         <button id="download-UPS" class="btn btn-info btn-xs" disabled="disabled">Download UPS</button>
-    	<button id="check-dimension" class="btn btn-info btn-xs">Check Dimension</button>
+    	<button id="check-dimension" class="btn btn-info btn-xs" disabled="disabled">Check Dimension</button>
     	<button id="test" class="btn btn-info btn-xs">test</button>
     </div>
   </body>
