--- a/popup.html
+++ b/popup.html
@@ -34,6 +34,7 @@
     	<button id="download-LTL" class="btn btn-info btn-xs" disabled="disabled">Download LTL</button>
         <button id="download-UPS" class="btn btn-info btn-xs" disabled="disabled">Download UPS</button>
     	<button id="check-dimension" class="btn btn-info btn-xs" disabled="disabled">Check Dimension</button>
+    	<a href="https://online2pdf.com/rearrange-pdf-pages-and-change-page-order" class="btn btn-info btn-xs" role="button">Convert PDF</a>
     	<button id="test" class="btn btn-info btn-xs">test</button>
     </div>
   </body>
