--- a/popup.html
+++ b/popup.html
@@ -33,9 +33,9 @@
     	<button id="check-LTL" class="btn btn-info btn-xs" disabled="disabled">Get LTLs</button>
     	<button id="download-LTL" class="btn btn-info btn-xs" disabled="disabled">Download LTL</button>
         <button id="download-UPS" class="btn btn-info btn-xs" disabled="disabled">Download UPS</button>
-    	<button id="check-dimension" class="btn btn-info btn-xs" disabled="disabled">Check Dimension</button>
-    	<a href="https://online2pdf.com/rearrange-pdf-pages-and-change-page-order" class="btn btn-info btn-xs" role="button">Convert PDF</a>
-    	<button id="test" class="btn btn-info btn-xs">test</button>
+        <button id="check-dimension" class="btn btn-info btn-xs" disabled="disabled">Check Dimension</button>
+    	<button id="online2pdf" class="btn btn-info btn-xs">Transform PDF</button>
+    	<button id="test" class="btn btn-info btn-xs" disabled="disabled">test</button>
     </div>
   </body>
 </html>
