--- a/src/popup.html
+++ b/src/popup.html
@@ -2,8 +2,9 @@
 <html>
   <head>
     <title>Wayfair Extension</title>
-    <script type="text/javascript" src="lib/jquery-3.2.1.min.js"></script>
+    <!-- <script type="text/javascript" src="thirdParty/jquery-3.2.1.min.js"></script> -->
     <script type="text/javascript" src="js/popup.js"></script>
+    <!-- <script type="text/javascript" src="productSpec/productSpecSheet.json"></script> -->
 
     <!-- Latest compiled and minified CSS -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
