--- a/html/popup.html
+++ b/html/popup.html
@@ -2,9 +2,9 @@
 <html>
   <head>
     <title>Wayfair Extension</title>
-    <!-- <script type="text/javascript" src="thirdParty/jquery-3.2.1.min.js"></script> -->
-    <script type="text/javascript" src="js/popup.js"></script>
-    <!-- <script type="text/javascript" src="productSpec/productSpecSheet.json"></script> -->
+    <script type="text/javascript" src="../lib/jquery-3.2.1.min.js"></script>
+    <script type="text/javascript" src="../lib/bootstrap-3.3.7-dist/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="../js/content.js"></script>
 
     <!-- Latest compiled and minified CSS -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
@@ -17,8 +17,6 @@
 
     <div class="container">
     	<h6>Wayfair</h6>
-    	<!-- <label class="btn btn-default btn-file">Browse <input type="file" style="display: none;"></label> -->
-    	<!-- <input type="file" hidden> -->
     	<div class="input-group input-group-sm" style="width: 300px;">
             <label class="input-group-btn">
                 <span class="btn btn-primary">
@@ -35,7 +33,6 @@
         <button id="download-UPS" class="btn btn-info btn-xs" disabled="disabled">Download UPS</button>
         <button id="check-dimension" class="btn btn-info btn-xs" disabled="disabled">Check Dimension</button>
     	<button id="online2pdf" class="btn btn-info btn-xs">Transform PDF</button>
-    	<button id="test" class="btn btn-info btn-xs" disabled="disabled">test</button>
     </div>
   </body>
 </html>
