implementing pagination, tbc..

--- a/html/popup.html
+++ b/html/popup.html
@@ -32,7 +32,8 @@
     	<button id="download-LTL" class="btn btn-info btn-xs" disabled="disabled">Download LTL</button>
         <button id="download-UPS" class="btn btn-info btn-xs" disabled="disabled">Download UPS</button>
         <button id="check-dimension" class="btn btn-info btn-xs" disabled="disabled">Check Dimension</button>
-    	<button id="online2pdf" class="btn btn-info btn-xs">Transform PDF</button>
+        <button id="online2pdf" class="btn btn-info btn-xs">Transform PDF</button>
+    	<button id="inject-button" class="btn btn-info btn-xs">Inject</button>
     </div>
   </body>
 </html>
