updated v2.0 UI / added page limit

--- a/html/popup.html
+++ b/html/popup.html
@@ -12,7 +12,8 @@
   <body>
 
     <div class="container">
-    	<h6>Wayfair</h6>
+        <br>
+    	<p>Wayfair</p>
     	<div class="input-group input-group-sm">
             <label class="input-group-btn">
                 <span class="btn btn-primary">
@@ -25,11 +26,15 @@
         <p>Version 1.0</p>
         <p id="popup-info1" hidden></p>
     	<button id="upload-CRW" class="btn btn-info btn-xs" disabled="disabled">Upload CR</button>
-    	<button id="check-UPS" class="btn btn-info btn-xs" disabled="disabled">Get UPSs</button>
+    	<button id="check-dimension" class="btn btn-info btn-xs" disabled="disabled">Check Dimension</button>
+        <button id="check-UPS" class="btn btn-info btn-xs" disabled="disabled">Get UPSs</button>
+        <button id="download-UPS" class="btn btn-info btn-xs" disabled="disabled">Download UPS</button>
     	<button id="check-LTL" class="btn btn-info btn-xs" disabled="disabled">Get LTLs</button>
     	<button id="download-LTL" class="btn btn-info btn-xs" disabled="disabled">Download LTL</button>
-        <button id="download-UPS" class="btn btn-info btn-xs" disabled="disabled">Download UPS</button>
-        <button id="check-dimension" class="btn btn-info btn-xs" disabled="disabled">Check Dimension</button>
+        
+        
+        <br>
+        <textarea class="form-control" rows="3" readonly></textarea>
 
         <hr>
         <p>Version 2.0</p>
