fixed dimension order bug

--- a/html/popup.html
+++ b/html/popup.html
@@ -36,7 +36,7 @@
         	<button id="download-LTL" class="btn btn-info" disabled="disabled">Download LTL</button>
         </div>
         <hr>
-        <p id="copyright">Copyright <i class="fa fa-copyright" aria-hidden="true"></i> Edison Huang 2017</p>
+        <p id="copyright">Copyright <i class="fa fa-copyright" aria-hidden="true"></i> Acme Furniture 2017</p>
 
         <!-- Progress bar modal -->
         <div class="modal js-loading-bar">
